Wiki Deployment Workflow: Limited to changes in /wiki

--- a/.github/workflows/wiki-deployment.yml
+++ b/.github/workflows/wiki-deployment.yml
@@ -1,9 +1,11 @@
 name: Wiki Deployment
 
 on:
-    push:
-      branches:
-        - master
+  push:
+    branches:
+      - master
+    paths:
+      - 'wiki/**'    
 
 jobs:
   sync-wiki-files:
